Remove references to libc version.
